createkf public endpoint to GET stories + pagination + category filtering
