# docs/swagger.json
@@ -1,1 +1,214 @@
-{}
+{
+  "openapi": "3.1.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "Stories app",
+    "license": {
+      "name": "Apache 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    },
+    "description": "This is a documentation of stories app"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "Auth operations."
+    },
+    {
+      "name": "Users",
+      "description": "Operations about users."
+    },
+    {
+      "name": "Stories",
+      "description": "Stories operations."
+    }
+  ],
+  "paths": {
+    "/stories": {
+      "get": {
+        "tags": [
+          "Stories"
+        ],
+        "summary": "Get list of stories",
+        "operationId": "getStories",
+        "description": "Get list stories (public endpoint)",
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "description": "page numbering",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          },
+          {
+            "in": "query",
+            "name": "perPage",
+            "description": "number of stories",
+            "schema": {
+              "type": "integer",
+              "example": 10
+            }
+          },
+          {
+            "in": "query",
+            "name": "category",
+            "description": "if you enter the country id from the database, it will display the stories of this country",
+            "schema": {
+              "type": "string",
+              "example": "68fb50c80ae91338641121f0"
+            }
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "description": "if you run popular, it will display the top 3 stories",
+            "schema": {
+              "type": "string",
+              "example": "popular"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully found stories!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found stories!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "data",
+                        "page",
+                        "perPage",
+                        "totalItems",
+                        "totalPages",
+                        "hasNextPage",
+                        "hasPreviousPage"
+                      ],
+                      "properties": {
+                        "data": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/stories"
+                          }
+                        },
+                        "page": {
+                          "type": "number",
+                          "example": 1
+                        },
+                        "perPage": {
+                          "type": "number",
+                          "example": 10
+                        },
+                        "totalItems": {
+                          "type": "number",
+                          "example": 4
+                        },
+                        "totalPages": {
+                          "type": "number",
+                          "example": 4
+                        },
+                        "hasNextPage": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "hasPreviousPage": {
+                          "type": "boolean",
+                          "example": true
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer"
+      }
+    },
+    "schemas": {
+      "stories": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "description": "Contact's id",
+            "type": "string",
+            "example": "68498236a100312bea079008"
+          },
+          "img": {
+            "description": "Link to contact's photo",
+            "type": "string",
+            "example": "https://ftp.goit.study/img/travel-blog/de37b4596c7d4a2a81a821d2bs.webp"
+          },
+          "title": {
+            "description": "Story title",
+            "type": "string",
+            "example": "Йорданія: шлях у Петру"
+          },
+          "article": {
+            "description": "description of history",
+            "type": "string",
+            "example": "Петра — одне з нових чудес світу, і вживу воно вражає ще більше. Ми пройшли Сік — вузький каньйон, який веде до Скарбниці, і вразилися масштабом стародавнього міста, висіченого у скелях. День минув у дослідженні храмів, амфітеатрів і гробниць. А ввечері ми залишилися на нічне шоу, коли Петра освітлюється сотнями свічок. Атмосфера була настільки чарівною, що здавалося, час повернувся на тисячі років назад."
+          },
+          "category": {
+            "description": "id country and country",
+            "type": "object",
+            "example": {
+              "_id": "68fb50c80ae91338641121f0",
+              "name": "Азія"
+            }
+          },
+          "ownerId": {
+            "description": "id user and user",
+            "type": "object",
+            "example": {
+              "_id": "6881563901add19ee16fd017",
+              "name": "Матвій Савченко"
+            }
+          },
+          "date": {
+            "description": "date",
+            "type": "string",
+            "example": "2025-01-10T00:00:00.000Z"
+          },
+          "favoriteCount": {
+            "description": "number of favorites",
+            "type": "number",
+            "example": 4
+          }
+        }
+      }
+    }
+  }
+}
